Simple rotten potatoes app

--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -8,6 +8,7 @@
             %th Rating
             %th Release Date
             %th More Info
+            
     %tbody
         - @movies.each do |movie|
             %tr
@@ -15,5 +16,5 @@
                 %td= movie.rating
                 %td= movie.release_date
                 %td= link_to "More about #{movie.title}", movie_path(movie)
-                
-                
+
+= link_to "Add movies", new_movie_path
