--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -12,4 +12,6 @@
 %h3 Description:
 %p#description= #{@movie.description}
 
-=link_to 'Back to movie list.', movies_path
+=link_to 'Edit info', edit_movie_path
+=button_to "Delete", movie_path, :method => :delete, data: {:confirm =>'Are you sure?'}
+=link_to 'Back to movie list', movies_path
